package fetch.cfg.data;

message TilingCursor 
{ 
  optional uint32 x=1;
  optional uint32 y=2;
  optional uint32 z=3;
}

message Acquisition
{ 
  optional float x_mm = 1;
  optional float y_mm = 2;
  optional float z_mm = 3;
  optional TilingCursor current_lattice_position = 4;
  optional uint32 cut_count = 5;
  optional float fov_x_size_um = 6; //DGA: Added the fov_ parameters
  optional float fov_y_size_um = 7;
  optional float fov_z_size_um = 8;
  optional float fov_x_overlap_um = 9;
  optional float fov_y_overlap_um = 10;
  optional float fov_z_overlap_um = 11;
  optional uint32 cut_count_since_scheduled_stop = 12 [default = 0];
}
